[flake8]
ignore = E501, W503
exclude =
    # No need to traverse our git directory
    .git,
    # Nothing worth checking in our IDE config
    .vscode,
    # There's no value in checking cache directories
    __pycache__,
    .pytest_cache
max-line-length = 119

[pycodestyle]
max-line-length = 119

[metadata]
description-file = README.md
